# bigearthnet_patch_interface

./: .autorc  .buildinfo  .gitignore  05_internal.html  CHANGELOG.md  README.md  api.html  api_merged.html  api_s1.html  api_s2.html  genindex.html  installation.html  intro.html  justfile  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: 05_internal.doctree  api.doctree  api_merged.doctree  api_s1.doctree  api_s2.doctree  environment.pickle  installation.doctree  intro.doctree
.doctrees/general/: code_of_conduct.doctree  dependencies.doctree  license.doctree
.github/: CONTRIBUTING.md  config.yml
.github/workflows/: main.yml  skip_test.yml  test.yml
_sources/: 05_internal.md.txt  api_s2.md.txt  installation.md.txt
bigearthnet_patch_interface/: band_interface.py  merged_interface.py  patch_interface.py  s1_interface.py  s2_interface.py
docs/: 01_usage.md  05_internal.md  _toc.yml  api.md  api_merged.md  api_s1.md  conf.py
general/: code_of_conduct.html  dependencies.html  license.html
src/bigearthnet_patch_interface/: __init__.py  patch_interface.py  s2_interface.py
tests/: __init__.py  band_test.py  merged_interface_test.py  s1_interface_test.py  s2_interface_test.py
