[tool.poetry]
name = "bigearthnet_patch_interface"
version = "0.1.0"
description = "BigEarthNet patch interface"
authors = ["Kai Norman Clasen <kai.ce.tub@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
numpy = "^1.21"
natsort = "^8.0.2"

[tool.poetry.dev-dependencies]
rasterio = "^1.2.10"
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
