[tool.poetry]
name = "bigearthnet_patch_interface"
version = "0.1.1"
description = "A simple interface class that includes all the relevant information about BigEarthNet patches."
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
homepage = "https://github.com/kai-tub/bigearthnet_patch_interface/"
repository = "https://github.com/kai-tub/bigearthnet_patch_interface/"

documentation = "https://github.com/kai-tub.github.io/bigearthnet_patch_interface"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pydantic = "^1.9"
numpy = "^1.21"
natsort = "^8"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
Sphinx = "^4.5"
furo = "*"
livereload = "*"
sphinx-external-toc = "*"
pre-commit = "*"
myst-nb = "*"
jupyter = "*"
sphinx-autobuild = "*"
ipykernel = "*"
linkify-it-py = "*"
rasterio = {version = "^1.2.10", allow-prereleases = true}
mypy = "*"
autodoc-pydantic = "^1.7.1"
sphinx_design = "^0.1.0"

[tool.mypy]
exclude = ["tests"]
# common plugins:
# plugins = "numpy.typing.mypy_plugin"ypy = "^0.960"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
